--- a/css/footer.css
+++ b/css/footer.css
@@ -13,7 +13,7 @@ body {
     padding-top: 2rem;
     padding-bottom: 3rem;
     width: 100%;
-    background-image: url(/assets/img/footer.webp);
+    background-image: src='assets/img/footer.webp';
     background-position: bottom;
     background-size: auto;
     background-repeat: no-repeat;
